edited publication page, README.txt and updated CV.pdf

--- a/pubs.html
+++ b/pubs.html
@@ -51,7 +51,7 @@
 
 								<h2>First-Author:</h2>
 								<li>Atopic dermatitis-associated 6p21 variants regulate LOC100294145 expression and type 1 interferon signaling (Under final round of internal review)</li>
-								<li>The role of alternative medical systems in chronic kidney disease patients – A systematic review of literature (Under final round of internal review)</li>
+								<li>The role of alternative medical systems in chronic kidney disease patients – A systematic review of literature (Submitted and under review by journal)</li>
 								<li>Co-expressing gene modules associated with atopic dermatitis are enriched in platelet activation and immune-related biological processes (At the initial stages of data analyses)</li>
 								<h2><br>Co-Author:</h2>
 								<li>Allergic Rhinitis in Young Adult Chinese from the Singapore/Malaysia Cross-Sectional Genetics Epidemiology Study (SMCGES) Cohort: Prevalence, Patterns and Epidemiology of Allergic Rhinitis (Submitted and under review by journal)</li>
